--- a/src/app/components/fichatecnica/fichatecnica.component.html
+++ b/src/app/components/fichatecnica/fichatecnica.component.html
@@ -161,9 +161,10 @@
                   </div>
                    
                 <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <button type="submit" (click)="consultaFichaTecnica()" class=" btnFonelli btn"><span *ngIf="bCargando" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#183e6f"> </span> BUSCAR</button>                          
+                    <div class=" col-md-3">
+                        <button type="submit" (click)="consultaFichaTecnica()" class=" btnFonelli btn"><span *ngIf="bCargando" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#183e6f"> </span> BUSCAR</button>                                                  
                     </div>
+                  
                 </div>  
                 
              </form><!-- End General Form Elements -->
@@ -244,11 +245,11 @@
   <br>
   <div class="form-row">
     <div class="container">
-
       <div class="form-group col-md-12">
-        <button class="btnImprimir btn float-right" (click)="downloadAsPDF()" >      
+        <button class="btnImprimir btn float-right" (click)="downloadAsPDF()" style="margin-left: 10px">      
           Imprimir PDF      
         </button> 
+        <button (click)="openDatosCliente(DatoCliente)" class=" btnImprimir btn float-right"  >Datos cliente</button>  
       </div>
 
     </div>
@@ -504,5 +505,70 @@
   </div>
 
 </ng-template> 
+<!--Modal datos cliente-->
+<ng-template #DatoCliente let-modal >
+  <div class="modal-header" >        
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>      
+
+  <div class="modal-body-tables" style="overflow-y: scroll;" >
+
+    <div class="container">
+      <div class="row">
+
+        <div class="form-group col-md-1">              
+          <br>
+          <label class="CamposFonelli">Buscar:</label>
+        </div>
+        <div class="form-group col-md-5">    
+          <br>          
+          <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="searchtext"
+              placeholder="Search"                 
+            />
+        </div>
+            
+
+        <div class="col-12" >                     
+          <table  class="table table-striped">
+            <thead>
+            <tr class="EncTabla">                                      
+              <th scope="col" >#</th>
+              <th scope="col" >FIL</th>
+              <th scope="col" >RAZÓN SOCIAL</th>
+              <th scope="col" >SUCURSAL</th>
+              <th scope="col" >STATUS</th>                      
+            </tr>
+            </thead>
+            <tbody>
+              <td *ngIf="bCargandoClientes" class="FilasFonelli" style="text-align:center" colspan="10"><span   class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#183e6f"> </span></td>
+              <tr *ngFor="let emp of oDatosCliente.Contenido |searchconsultaCliente: searchtext; index as i" (click)="obtenCliente(emp.ClienteCodigo)">
+                <th scope="row">{{ i + 1 }}</th>                                      
+                <td class="FilasFonelli" style="text-align:left">{{emp.ClienteFilial}}</td>                
+                <td class="FilasFonelli" style="text-align:left">{{emp.RazonSocial}}</td>
+                <td class="FilasFonelli" style="text-align:left">{{emp.DatosGenerales.Sucursal}}</td>
+                <td class="FilasFonelli" style="text-align:left">{{emp.DatosGenerales.Status}}</td>                               
+              </tr>
+            </tbody>
+          </table>            
+          
+        </div>  
+      </div>
+        
+    </div>
+  </div>
+
+
+  <div class="modal-footer">
+    <!-- <button type="submit" class="btn btn-primary" [disabled]="!formLoginDistribuidor.form.valid">INGRESAR</button> -->
+    
+  </div>
+
+</ng-template> 
+
+
+
 
 
