--- a/src/app/components/consultainactivos/consultainactivos.component.html
+++ b/src/app/components/consultainactivos/consultainactivos.component.html
@@ -80,7 +80,7 @@
 </div>
     
 
-<div *ngIf="bBandera"  class="container float-left">  
+<div [hidden]="!bBandera"  class="container float-left">  
   <!-- <div class="container" >      -->
 
   <br>
@@ -106,7 +106,7 @@
   </div>
 
 <div class="container"  id="pdfTable" #pdfTable>
-  <table  class="table table-hover table-striped" datatable [dtOptions]="dtOptions">
+  <table  class="table table-hover table-striped" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"  >
     <thead>
       <tr class="EncTabla">                 
         <th class="table-warning" scope="col"></th>
@@ -116,8 +116,8 @@
         <th class="table-warning" scope="col"></th>
         <th class="table-warning" scope="col"></th>
         <th class="table-warning" scope="col"></th>
-        <th class="table-warning" scope="col" [attr.colspan]="sColSaldo" style="text-align:center; color: #24a4cc;">SALDO TOTAL</th>  
-        <th class="table-success" scope="col" [attr.colspan]="sColVencido" style="text-align:center; color: #24a4cc;">SALDO VENCIDO</th>
+        <th class="table-warning" scope="col" [attr.colspan]="6" style="text-align:center; color: #24a4cc;">SALDO TOTAL</th>  
+        <th class="table-success" scope="col" [attr.colspan]="6" style="text-align:center; color: #24a4cc;">SALDO VENCIDO</th>
         <th colspan="2" style="text-align:center; background-color:#24a4cc;"></th>
 
       </tr>
@@ -129,18 +129,18 @@
       <th style="background-color: #24a4cc; color: white;" scope="col">L1</th>
       <th style="background-color: #24a4cc; color: white; text-align: center;" scope="col">L2</th>
       <th style="background-color: #24a4cc; color: white; text-align: center;" scope="col">PLAZO</th>
-      <th *ngIf="bBanCtaCorrMN_SAL" style="background-color: #24a4cc; color: white; text-align: center;" scope="col">CTACORR_MN</th>
-      <th *ngIf="bBanCtaCorrORO_SAL" style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_ORO</th>
-      <th *ngIf="bBanCtaCorrDLLS_SAL"style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_DLLS</th>
-      <th *ngIf="bBanCtaDocMN_SAL" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_MN</th>            
-      <th *ngIf="bBanCtaDocORO_SAL" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_ORO</th>            
-      <th *ngIf="bBanCtaDocDLLS_SAL" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_DLLS</th>            
-      <th *ngIf="bBanCtaCorrMN_VEN" style="background-color: #24a4cc; color: white; text-align: center;" scope="col">CTACORR_MN</th>
-      <th *ngIf="bBanCtaCorrORO_VEN" style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_ORO</th>
-      <th *ngIf="bBanCtaCorrDLLS_VEN" style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_DLLS</th>
-      <th *ngIf="bBanCtaDocMN_VEN" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_MN</th>            
-      <th *ngIf="bBanCtaDocORO_VEN" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_ORO</th>            
-      <th *ngIf="bBanCtaDocDLLS_VEN" style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_DLLS</th>            
+      <th style="background-color: #24a4cc; color: white; text-align: center;" scope="col">CTACORR_MN</th>
+      <th style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_ORO</th>
+      <th style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_DLLS</th>
+      <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_MN</th>            
+      <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_ORO</th>            
+      <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_DLLS</th>            
+      <th style="background-color: #24a4cc; color: white; text-align: center;" scope="col">CTACORR_MN</th>
+      <th style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_ORO</th>
+      <th style="background-color: #24a4cc; color: white; text-align:right;">CTACORR_DLLS</th>
+      <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_MN</th>            
+      <th  style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_ORO</th>            
+      <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">CTADOC_DLLS</th>            
       <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">DÍAS</th>
       <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">PED</th>
     </tr>
@@ -155,18 +155,18 @@
           <td></td>
           <td></td>
           <td></td>
-          <td *ngIf="bBanCtaCorrMN_SAL"></td>
-          <td *ngIf="bBanCtaCorrORO_SAL"></td>
-          <td *ngIf="bBanCtaCorrDLLS_SAL"></td>
-          <td *ngIf="bBanCtaDocMN_SAL"></td>            
-          <td *ngIf="bBanCtaDocORO_SAL"></td>            
-          <td *ngIf="bBanCtaDocDLLS_SAL"></td>            
-          <td *ngIf="bBanCtaCorrMN_VEN"></td>
-          <td *ngIf="bBanCtaCorrORO_VEN"></td>
-          <td *ngIf="bBanCtaCorrDLLS_VEN"></td>
-          <td *ngIf="bBanCtaDocMN_VEN"></td>            
-          <td *ngIf="bBanCtaDocORO_VEN"></td>            
-          <td *ngIf="bBanCtaDocDLLS_VEN"></td> 
+          <td ></td>
+          <td ></td>
+          <td ></td>
+          <td ></td>            
+          <td ></td>            
+          <td ></td>            
+          <td ></td>
+          <td ></td>
+          <td ></td>
+          <td ></td>            
+          <td ></td>            
+          <td ></td> 
           <td></td>
           <td></td>
         </tr>
@@ -181,19 +181,19 @@
           <td class="FilasFonelli" style="text-align:left">{{ cli.Lista2}}</td>
           <td class="FilasFonelli" style="text-align:left">{{ cli.Plazo}}</td>               
 
-          <td *ngIf="bBanCtaCorrMN_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaCorrMN_SAL}}</td>
-          <td *ngIf="bBanCtaCorrORO_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaCorrORO_SAL}}</td>
-          <td *ngIf="bBanCtaCorrDLLS_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaCorrDLLS_SAL}}</td>
-          <td *ngIf="bBanCtaDocMN_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaDocMN_SAL}}</td>
-          <td *ngIf="bBanCtaDocORO_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaDocORO_SAL}}</td>
-          <td *ngIf="bBanCtaDocDLLS_SAL" class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaDocDLLS_SAL}}</td>
+          <td class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaCorrMN_SAL}}</td>
+          <td class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaCorrORO_SAL}}</td>
+          <td class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaCorrDLLS_SAL}}</td>
+          <td class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaDocMN_SAL}}</td>
+          <td class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaDocORO_SAL}}</td>
+          <td class="table-warning FilasFonelli" style="text-align:right">{{ cli.CtaDocDLLS_SAL}}</td>
 
-          <td *ngIf="bBanCtaCorrMN_VEN" class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaCorrMN_VEN}}</td>
-          <td *ngIf="bBanCtaCorrORO_VEN" class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaCorrORO_VEN}}</td>
-          <td *ngIf="bBanCtaCorrDLLS_VEN" class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaCorrDLLS_VEN}}</td>
-          <td *ngIf="bBanCtaDocMN_VEN" class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaDocMN_VEN}}</td> 
-          <td *ngIf="bBanCtaDocORO_VEN" class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaDocORO_VEN}}</td> 
-          <td *ngIf="bBanCtaDocDLLS_VEN" class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaDocDLLS_VEN}}</td> 
+          <td  class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaCorrMN_VEN}}</td>
+          <td  class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaCorrORO_VEN}}</td>
+          <td  class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaCorrDLLS_VEN}}</td>
+          <td  class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaDocMN_VEN}}</td> 
+          <td  class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaDocORO_VEN}}</td> 
+          <td  class="table-success FilasFonelli" style="text-align:right">{{ cli.CtaDocDLLS_VEN}}</td> 
 
   
           <td class="FilasFonelli" style="text-align:right">{{ cli.DiasAtraso}}</td>
@@ -210,19 +210,19 @@
           <td></td>
           <td class="FilasFonBold" style="text-align:right">Total agente</td>               
 
-          <td *ngIf="bBanCtaCorrMN_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaCorrMN_SAL}}</td>
-          <td *ngIf="bBanCtaCorrORO_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaCorrORO_SAL}}</td>
-          <td *ngIf="bBanCtaCorrDLLS_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaCorrDLLS_SAL}}</td>
-          <td *ngIf="bBanCtaDocMN_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaDocMN_SAL}}</td>
-          <td *ngIf="bBanCtaDocORO_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaDocORO_SAL}}</td>
-          <td *ngIf="bBanCtaDocDLLS_SAL" class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaDocDLLS_SAL}}</td>
+          <td  class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaCorrMN_SAL}}</td>
+          <td  class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaCorrORO_SAL}}</td>
+          <td  class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaCorrDLLS_SAL}}</td>
+          <td  class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaDocMN_SAL}}</td>
+          <td  class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaDocORO_SAL}}</td>
+          <td  class="table-warning FilasFonBold" style="text-align:right">{{ con.CtaDocDLLS_SAL}}</td>
 
-          <td *ngIf="bBanCtaCorrMN_VEN" class="table-success FilasFonBold" style="text-align:right">{{ con.CtaCorrMN_VEN}}</td>
-          <td *ngIf="bBanCtaCorrORO_VEN" class="table-success FilasFonBold" style="text-align:right">{{ con.CtaCorrORO_VEN}}</td>
-          <td *ngIf="bBanCtaCorrDLLS_VEN" class="table-success FilasFonBold" style="text-align:right">{{ con.CtaCorrDLLS_VEN}}</td>
-          <td *ngIf="bBanCtaDocMN_VEN" class="table-success FilasFonBold" style="text-align:right">{{ con.CtaDocMN_VEN}}</td> 
-          <td *ngIf="bBanCtaDocORO_VEN" class="table-success FilasFonBold" style="text-align:right">{{ con.CtaDocORO_VEN}}</td> 
-          <td *ngIf="bBanCtaDocDLLS_VEN" class="table-success FilasFonBold" style="text-align:right">{{ con.CtaDocDLLS_VEN}}</td> 
+          <td  class="table-success FilasFonBold" style="text-align:right">{{ con.CtaCorrMN_VEN}}</td>
+          <td  class="table-success FilasFonBold" style="text-align:right">{{ con.CtaCorrORO_VEN}}</td>
+          <td  class="table-success FilasFonBold" style="text-align:right">{{ con.CtaCorrDLLS_VEN}}</td>
+          <td  class="table-success FilasFonBold" style="text-align:right">{{ con.CtaDocMN_VEN}}</td> 
+          <td  class="table-success FilasFonBold" style="text-align:right">{{ con.CtaDocORO_VEN}}</td> 
+          <td  class="table-success FilasFonBold" style="text-align:right">{{ con.CtaDocDLLS_VEN}}</td> 
   
           <td></td>
           <td></td>
@@ -240,19 +240,19 @@
         <td></td>
         <td class="FilasFonBold" style="text-align:right">Total general</td>               
 
-        <td *ngIf="bBanCtaCorrMN_SAL" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrMN_SAL }}</td>
-        <td *ngIf="bBanCtaCorrORO_SAL" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrORO_SAL }}</td>
-        <td *ngIf="bBanCtaCorrDLLS_SAL" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrDLLS_SAL }}</td>
-        <td *ngIf="bBanCtaDocMN_SAL" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocMN_SAL }}</td>
-        <td *ngIf="bBanCtaDocORO_SAL" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocORO_SAL }}</td>
-        <td *ngIf="bBanCtaDocDLLS_SAL" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocDLLS_SAL }}</td>
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrMN_SAL }}</td>
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrORO_SAL }}</td>
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrDLLS_SAL }}</td>
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocMN_SAL }}</td>
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocORO_SAL }}</td>
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocDLLS_SAL }}</td>
 
-        <td *ngIf="bBanCtaCorrMN_VEN" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrMN_VEN }}</td>
-        <td *ngIf="bBanCtaCorrORO_VEN" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrORO_VEN }}</td>
-        <td *ngIf="bBanCtaCorrDLLS_VEN" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrDLLS_VEN }}</td>
-        <td *ngIf="bBanCtaDocMN_VEN" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocMN_VEN }}</td> 
-        <td *ngIf="bBanCtaDocORO_VEN" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocORO_VEN }}</td> 
-        <td *ngIf="bBanCtaDocDLLS_VEN" class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocDLLS_VEN }}</td> 
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrMN_VEN }}</td>
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrORO_VEN }}</td>
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaCorrDLLS_VEN }}</td>
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocMN_VEN }}</td> 
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocORO_VEN }}</td> 
+        <td  class="FilasFonBold" style="text-align:right">{{ this.oClientesInacRes.CtaDocDLLS_VEN }}</td> 
         <td></td>
         <td></td>
         
