--- a/src/app/components/fichatecnica/fichatecnica.component.html
+++ b/src/app/components/fichatecnica/fichatecnica.component.html
@@ -555,7 +555,7 @@
                 <div class="col-lg-12">
                   <div class="card">
                     <div class="card-body">
-                      <h2 style="text-align: center; font-size:xx-large;" >{{obtenNombreCliente(oBuscar.Cliente)}}</h2>
+                      <h2 style="text-align: center; font-size:xx-large;" >{{sClienteFil}}</h2>
       
                       <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
                         <li [ngbNavItem]="1">
