--- a/src/assets/css/templatemo-nomad-force.css
+++ b/src/assets/css/templatemo-nomad-force.css
@@ -928,3 +928,18 @@ td {
 }
 
 
+/* ------------------------------------------- */
+button.btnExcel {
+  background-color: #198754 !important;
+  /*color:#c3cfd9 !important;*/
+  font-family: Quicksand-SemiBold;
+  margin-bottom: 14px;
+  margin-left: 40px;
+}
+
+dt-button{
+  color:rgba(255, 255, 255, 0.98) !important;
+  font-family: Quicksand-SemiBold;
+}
+/* ------------------------------------------- */
+
